WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193093
IndexedDB: UniqueIDBDatabase should not be freed if the database task queue is not empty.
https://bugs.webkit.org/show_bug.cgi?id=193093
Summary
IndexedDB: UniqueIDBDatabase should not be freed if the database task queue i...
Sihui Liu
Reported
2019-01-02 16:46:53 PST
We may kill the database task queue while there are tasks in it.
Attachments
Patch
(3.34 KB, patch)
2019-01-02 16:58 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.36 KB, patch)
2019-01-16 14:48 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.33 KB, patch)
2019-01-16 15:13 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-01-02 16:58:23 PST
Created
attachment 358224
[details]
Patch
Brady Eidson
Comment 2
2019-01-11 09:13:32 PST
Comment on
attachment 358224
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358224&action=review
> Source/WebCore/ChangeLog:3 > + IndexedDB: UniqueIDBDatabase should be freed after database task queue is empty
Since I misunderstood, I would reword: UniqueIDBDatabase should not be freed if the database task queue is not empty.
Sihui Liu
Comment 3
2019-01-16 14:48:14 PST
Created
attachment 359313
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2019-01-16 14:49:40 PST
Comment on
attachment 359313
[details]
Patch for landing Rejecting
attachment 359313
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 359313, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/10776385
Sihui Liu
Comment 5
2019-01-16 15:13:54 PST
Created
attachment 359319
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-01-16 15:52:43 PST
Comment on
attachment 359319
[details]
Patch for landing Clearing flags on attachment: 359319 Committed
r240090
: <
https://trac.webkit.org/changeset/240090
>
WebKit Commit Bot
Comment 7
2019-01-16 15:52:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2019-01-16 15:53:30 PST
<
rdar://problem/47333061
>
Brent Fulgham
Comment 9
2021-08-11 15:22:17 PDT
***
Bug 161414
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug