IndexedDB: UniqueIDBDatabase should not be freed if the database task queue is not empty. https://bugs.webkit.org/show_bug.cgi?id=193093

Reviewed by Brady Eidson.

performUnconditionalDeleteBackingStore killed the database task queue immediately, but performPrefetchCursor
task may be scheduled behind performUnconditionalDeleteBackingStore on database thread.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::shutdownForClose):
(WebCore::IDBServer::UniqueIDBDatabase::performPrefetchCursor):
(WebCore::IDBServer::UniqueIDBDatabase::isDoneWithHardClose):


Canonical link: https://commits.webkit.org/208020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240090 268f45cc-cd09-0410-ab3c-d52691b4dbfc